Added correct index to Cendiary Priest adversary Removed Built-in comlink from adversaries gear

--- a/src/data/adversaries.yaml
+++ b/src/data/adversaries.yaml
@@ -693,7 +693,7 @@
   talents: Force Rating 3, Intuitive Improvements
   abilities: Master Metalshaper
   equipment: None
-  index:
+  index: dfca4764-06e7-4ee3-9ac8-aec65723bdec:36
   generatedId: 29521650-70fe-4807-bfd3-f1e726bd2a8c
 - name: CG/KDY AT-ED
   level: Rival
