Temporarily disable CodeCov

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,10 @@ jobs:
       - run:
           name: test
           command: yarn test
-      - run:
-          name: coverage
-          command: bash <(curl -s https://codecov.io/bash)
+      # TODO: Disabling CodeCov until we have some actual tests.
+      # - run:
+      #     name: coverage
+      #     command: bash <(curl -s https://codecov.io/bash)
 workflows:
   build-and-test:
     jobs:
