--- a/src/data/adversaries-weapons.yaml
+++ b/src/data/adversaries-weapons.yaml
@@ -1142,7 +1142,7 @@
   crit: 3
   range: Engaged
   special: Pierce 2
-  index: Rise of the Separatists:141
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:141
   generatedId: 176f4e1c-0784-4376-b9d9-87f50ae09dfd
 - name: Unstable Power Cell
   skill: Ranged (Light)
@@ -1151,7 +1151,7 @@
   crit: 4
   range: Short
   special: Blast 5, Disorient 2, Inferior, Limited Ammo 1
-  index: Rise of the Separatists:109
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:109
   generatedId: 26bb6ead-122c-49cb-9249-6bfce6e23a17
 - name: Microgrenade Launcher
   skill: Ranged (Light)
@@ -1160,7 +1160,7 @@
   crit: 4
   range: Short
   special: Blast 4
-  index: Rise of the Separatists:142
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:142
   generatedId: 274ca301-2a50-47bc-8b65-61d84cc3aa10
 - name: Integrated Wrist Blaster
   skill: Ranged (Heavy)
@@ -1169,7 +1169,7 @@
   crit: 3
   range: Medium
   special: Linked 1
-  index: Rise of the Separatists:140
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:140
   generatedId: 2e8fd286-f881-48e4-99db-e425a9ab2699
 - name: "Ventress's Two Lightsabers"
   skill: Lightsaber
@@ -1178,7 +1178,7 @@
   crit: 2
   range: Engaged
   special: Breach 1, Defensive 1, Sunder, Vicious 2
-  index: Rise of the Separatists:99
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:99
   generatedId: 33fd8029-26d4-4b02-b2fe-4bc03aa52064
 - name: Sonic Blaster
   skill: Ranged (Heavy)
@@ -1187,7 +1187,7 @@
   crit: 3
   range: Medium
   special: Disorient 3, Knockdown
-  index: Rise of the Separatists:109
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:109
   generatedId: 55b1b838-563a-4b36-8c04-ad949c41aae8
 - name: Integrated Vibroblade
   skill: Melee
@@ -1196,7 +1196,7 @@
   crit: 2
   range: Engaged
   special: Pierce 2, Vicious 1
-  index: Rise of the Separatists:144
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:144
   generatedId: 5d27a11e-9555-4040-9475-ff770c07551b
 - name: Length of Durasteel Cable
   skill: Melee
@@ -1205,7 +1205,7 @@
   crit: 5
   range: Engaged
   special: Ensnare 1, Inferior
-  index: Rise of the Separatists:109
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:109
   generatedId: 6489d42b-c4ac-46bc-8853-774fb71c5f80
 - name: Integrated Heavy Repeating Blaster
   skill: Gunnery
@@ -1214,7 +1214,7 @@
   crit: 2
   range: Long
   special: Auto-Fire, Pierce 2, Vicious 1
-  index: Rise of the Separatists:143
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:143
   generatedId: 7ad4b38e-66f5-4a7f-a540-27639f55f77a
 - name: "Obi-Wan's Lightsaber"
   skill: Lightsaber
@@ -1223,7 +1223,7 @@
   crit: 1
   range: Engaged
   special: Breach 1, Sunder
-  index: Rise of the Separatists:93
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:93
   generatedId: 83951611-de2e-4e12-904e-e65f9667dee6
 - name: Gaffi Stick
   skill: Melee
@@ -1232,7 +1232,7 @@
   crit: 3
   range: Engaged
   special: Defensive 1, Disorient 3
-  index: Rise of the Separatists:121
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:121
   generatedId: 860a57ef-520b-41ff-a8f0-e7e8d7dbdaa4
 - name: "Count Dooku's Lightsaber"
   skill: Lightsaber
@@ -1241,7 +1241,7 @@
   crit: 1
   range: Engaged
   special: Breach 1, Defensive 1, Sunder, Vicious 3, add a Dark Side pip to Force power checks.
-  index: Rise of the Separatists:98
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:98
   generatedId: ac229dde-4278-4572-b7c4-5b78b67a4ddb
 - name: 4 Lightsabers
   skill: Lightsaber
@@ -1250,7 +1250,7 @@
   crit: 2
   range: Engaged
   special: Breach 1, Linked 3, Sunder, Vicious 3
-  index: Rise of the Separatists:101
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:101
   generatedId: d080702e-7a1b-4e21-9895-9bfde444898b
 - name: Integrated Dual Heavy Repeating Blasters
   skill: Gunnery
@@ -1259,7 +1259,7 @@
   crit: 2
   range: Long
   special: Auto-Fire, Linked 1, Pierce 2, Vicious 1
-  index: Rise of the Separatists:143
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:143
   generatedId: e23d6169-5e0b-4578-a94a-bd038f496a48
 - name: Mechanical Limbs
   skill: Brawl
@@ -1268,7 +1268,7 @@
   crit: 3
   range: Engaged
   special: Disorient 3, Knockdown
-  index: Rise of the Separatists:101
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:101
   generatedId: e2bc3769-a4ee-4f4a-80d8-b810a1fdde4d
 - name: Clawed Limb
   skill: Brawl
@@ -1277,5 +1277,5 @@
   crit: 4
   range: Engaged
   special: Ensnare 1, Knockdown
-  index: Rise of the Separatists:143
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:143
   generatedId: e75f52f8-a984-4ca4-9977-a977fbf2c23d
