--- a/src/data/talents.yaml
+++ b/src/data/talents.yaml
@@ -2853,281 +2853,281 @@
   activation: Passive
   ranked: Yes
   forceSensitive: No
-  index: Rise of the Separatists:42
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:42
   generatedId: 061400b5-13a6-4cf1-b1ab-4f4a521e0568
 - name: Clanker Killer
   activation: Active (Incidental)
   ranked: Yes
   forceSensitive: No
-  index: Rise of the Separatists:38
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:38
   generatedId: 0773e2d6-b953-4b96-b8d8-66e8e28275bd
 - name: Learning Opportunity
   activation: Active (Incidental)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:40
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:40
   generatedId: 0d421ee3-63d6-4912-b322-c2aec0ec1bdf
 - name: Barrel Roll (Improved)
   activation: Passive
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:37
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:37
   generatedId: 0d49ac64-aec2-476d-b5cf-29eeb632adb9
 - name: "Scrap 'em (Improved)"
   activation: Passive
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:42
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:42
   generatedId: 0df55ca7-39ef-4bb6-831c-21dd356d4863
 - name: Translation Error
   activation: Active (Incidental)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:43
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:43
   generatedId: 0e1bdeee-75be-4a95-9d06-ed3b0c96fb95
 - name: Renegade Form
   activation: Passive
   ranked: No
   forceSensitive: Yes
-  index: Rise of the Separatists:42
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:42
   generatedId: 11a8af6d-68dd-47a4-9309-0ce697af83b1
 - name: Mission Critical
   activation: Active (Incidental)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:40
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:40
   generatedId: 16e2bc74-4dd1-4cb4-b74c-f89971759c11
 - name: "Scrap 'em"
   activation: Active (Incidental)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:42
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:42
   generatedId: 177aa34b-dd15-4689-9c64-5ec9ddd24030
 - name: Fire Support
   activation: Passive
   ranked: Yes
   forceSensitive: No
-  index: Rise of the Separatists:39
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:39
   generatedId: 1dab8f88-ff05-4777-a29d-b1482692d051
 - name: Ordnance Saturation
   activation: Passive
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:41
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:41
   generatedId: 2775278c-6e6d-445d-82e1-2652c7f8567c
 - name: First Among Brothers
   activation: Passive
   ranked: Yes
   forceSensitive: No
-  index: Rise of the Separatists:39
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:39
   generatedId: 283f3275-d41e-4a13-a767-008285309264
 - name: Fire When Ready
   activation: Active (Action)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:39
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:39
   generatedId: 2f2ed509-0497-4b12-afad-c1e1772fc4cc
 - name: Exceed Specifications
   activation: Active (Incidental)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:39
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:39
   generatedId: 449113cf-6864-4003-bad7-798cd5b74c79
 - name: Natural Trooper
   activation: Active (Incidental)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:40
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:40
   generatedId: 48a79bb2-ba1e-4a40-abed-e504e8ed8adc
 - name: Barrel Roll
   activation: Active (Incidental, Out of Turn)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:37
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:37
   generatedId: 4b8c9600-e915-471d-83b3-7bbd4d50d049
 - name: Assault Drop
   activation: Active (Incidental)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:37
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:37
   generatedId: 5060a82a-e3d2-4995-99e9-5eff75d0e75b
 - name: Adaptable
   activation: Active (Incidental)
   ranked: No
   forceSensitive: Yes
-  index: Rise of the Separatists:37
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:37
   generatedId: 5219379e-29be-436a-9aa7-ec13b5dc4b7b
 - name: Secrets of the Force
   activation: Passive
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:42
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:42
   generatedId: 5f3efbb0-035f-4398-9623-734ffaa65ebb
 - name: "Beginner's Luck"
   activation: Active (Incidental)
   ranked: No
   forceSensitive: Yes
-  index: Rise of the Separatists:37
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:37
   generatedId: 63456b38-ac9a-4e37-93f9-618a575dcf7b
 - name: Temple Training
   activation: Active (Incidental)
   ranked: No
   forceSensitive: Yes
-  index: Rise of the Separatists:43
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:43
   generatedId: 67286fdb-7f6c-4cc3-99cd-3e200d380a08
 - name: For the Republic!
   activation: Active (Incidental, Out of Turn)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:39
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:39
   generatedId: 69fd2cdb-853b-489d-af2a-eff8682c3644
 - name: On My Order
   activation: Active (Action)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:40
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:40
   generatedId: 6f0e8cfd-1404-4cbc-8824-be6d551bba2e
 - name: Consider Our Options
   activation: Active (Action)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:38
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:38
   generatedId: 7187178e-f835-4f4d-9d30-3cbbfbf562f6
 - name: "One Person's Trash"
   activation: Active (Action)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:40
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:40
   generatedId: 72552aa7-efa0-49fb-ba58-38909c2bdb21
 - name: Leverage
   activation: Passive
   ranked: Yes
   forceSensitive: No
-  index: Rise of the Separatists:40
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:40
   generatedId: 84bf0735-1903-4f14-a17a-08e1cae4534c
 - name: Sincerest Flattery
   activation: Active (Incidental)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:42
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:42
   generatedId: 87be129d-ebeb-4700-9cc6-b3943dddc148
 - name: Guardian of the Republic
   activation: Passive
   ranked: No
   forceSensitive: Yes
-  index: Rise of the Separatists:39
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:39
   generatedId: 8807c1e1-177f-401a-9d2e-399c5787ed1c
 - name: Utility Belt (Improved)
   activation: Passive
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:43
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:43
   generatedId: 88605307-aa11-4736-ac86-01283a5f982e
 - name: "Another's Treasure"
   activation: Passive
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:37
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:37
   generatedId: 8bb7b3d9-3330-44b7-93da-409fd77256b6
 - name: Exceed Specifications (Improved)
   activation: Passive
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:39
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:39
   generatedId: 93ad50dc-f68a-4f29-8eff-6ce9b9701be4
 - name: Will of the Force
   activation: Active (Incidental)
   ranked: No
   forceSensitive: Yes
-  index: Rise of the Separatists:43
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:43
   generatedId: 95f9cad3-3112-42a0-b519-4700550a6009
 - name: Exceed Specifications (Supreme)
   activation: Active (Incidental)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:39
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:39
   generatedId: a0c39921-60ef-4ee4-bb93-c31b908199bf
 - name: Outmaneuver
   activation: Active (Action)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:41
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:41
   generatedId: b96a84c3-7fb1-4323-ac32-20269b2aa5ed
 - name: Hyperspace Assault
   activation: Passive
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:39
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:39
   generatedId: ba88338f-38d0-46c9-b1a5-79e31304ad63
 - name: Backroom Deal
   activation: Active (Action)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:37
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:37
   generatedId: c26d3134-6712-4b46-9f22-e103f851825f
 - name: Natural Operator
   activation: Active (Incidental)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:40
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:40
   generatedId: c3c8d8cc-581f-42d5-8665-1568e4be70dc
 - name: Brace (Supreme)
   activation: Passive
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:38
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:38
   generatedId: c8ca0234-fd93-4508-b378-397d7cf35f41
 - name: Brace (Improved)
   activation: Passive
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:38
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:38
   generatedId: d88e2673-e57d-424d-b69d-232d43112bfd
 - name: Something to Prove
   activation: Active (Incidental)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:42
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:42
   generatedId: dafc65cc-a848-45c4-9f15-96c26295c487
 - name: Ravage
   activation: Active (Incidental)
   ranked: No
   forceSensitive: Yes
-  index: Rise of the Separatists:41
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:41
   generatedId: e424919a-925a-4743-8f6e-ed21bb5f776b
 - name: Tactical Advance (Improved)
   activation: Active (Incidental, Out of Turn)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:43
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:43
   generatedId: e54d54eb-bc33-4906-913f-0097d5167022
 - name: Consider Our Options (Improved)
   activation: Active (Incidental)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:38
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:38
   generatedId: e5842c37-e370-4b93-9dba-9b2f7c6d48c9
 - name: Barrel Roll (Supreme)
   activation: Active
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:37
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:37
   generatedId: ecc5f118-a1e4-49fa-af79-cc23adc59c14
 - name: Lateral Thinking
   activation: Active (Incidental, Out of Turn)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:40
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:40
   generatedId: f38c6897-0ead-4300-a28e-f12410cb49e4
 - name: Side by Side
   activation: Passive
   ranked: No
   forceSensitive: Yes
-  index: Rise of the Separatists:42
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:42
   generatedId: f5687c53-630e-4413-98a6-82d2b742cbec
 - name: Tactical Advance
   activation: Active (Incidental)
   ranked: No
   forceSensitive: No
-  index: Rise of the Separatists:43
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:43
   generatedId: f8d02cc2-bccf-487e-8dcb-f195db41b214
