--- a/src/data/weapons.yaml
+++ b/src/data/weapons.yaml
@@ -3246,7 +3246,7 @@
   restricted: true
   rarity: 6
   special: Cumbersome 3, Pierce 1, Stun Setting
-  index: Rise of the Separatists:51
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:51
   generatedId: 8a3b41fe-87d7-4086-9954-4ee6f4cfcc59
 - category: Energy
   name: DC-15A Blaster Carbine
@@ -3261,7 +3261,7 @@
   restricted: true
   rarity: 5
   special: Auto-Fire, Pierce 1, Stun Setting
-  index: Rise of the Separatists:51
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:51
   generatedId: 94ee1276-fa88-45ab-b238-c740a29f3d27
 - category: Energy
   name: DC-17 Hand Blaster
@@ -3276,7 +3276,7 @@
   restricted: true
   rarity: 6
   special: Accurate 1, Stun Setting
-  index: Rise of the Separatists:51
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:51
   generatedId: fc0f55ac-c387-4e06-831b-3a2cafdc6b38
 - category: Energy
   name: Z-6 Rotary Cannon
@@ -3291,7 +3291,7 @@
   restricted: true
   rarity: 7
   special: Auto-Fire (Only), Cumbersome 3, Prepare 1
-  index: Rise of the Separatists:52
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:52
   generatedId: 1acde327-a269-4dde-acd6-174205a2435d
 - category: Grenade
   name: AP-M1 Armor Piercing Grenade
@@ -3306,7 +3306,7 @@
   restricted: true
   rarity: 6
   special: Blast 4, Limited Ammo 1, Pierce 4
-  index: Rise of the Separatists:52
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:52
   generatedId: 71b862ae-6d21-4459-8568-1fed083a895c
 - category: Other
   name: BT X-42 Heavy Flame Projector
@@ -3321,7 +3321,7 @@
   restricted: true
   rarity: 7
   special: Blast 6, Burn 4, Vicious 1
-  index: Rise of the Separatists:52
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:52
   generatedId: 0e33ae11-dba2-4872-8686-24173497f13e
 - category: Grenade
   name: Mk II EMP Grenade
@@ -3336,7 +3336,7 @@
   restricted: false
   rarity: 5
   special: Blast 6, Disorient 3, Ion, Limited Ammo 1
-  index: Rise of the Separatists:53
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:53
   generatedId: 7cdaf7ff-235d-4f77-97bf-d598ccd66446
 - category: Other
   name: Model 201 Mortar System
@@ -3351,7 +3351,7 @@
   restricted: true
   rarity: 7
   special: Blast 12, Breach 1, Limited Ammo 5, Prepare 2, Slow-Firing 1
-  index: Rise of the Separatists:53
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:53
   generatedId: 00511104-c989-4476-9176-352109557c47
 - category: Other
   name: RPS-6 Rocket Launcher
@@ -3366,7 +3366,7 @@
   restricted: true
   rarity: 8
   special: Blast 14, Breach 1, Cumbersome 4, Guided 2, Limited Ammo 7
-  index: Rise of the Separatists:53
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:53
   generatedId: 392a3c2c-2fe5-4fe3-b829-836f8db04bba
 - category: Melee
   name: M3 Bulwark Blast Shield
@@ -3381,7 +3381,7 @@
   restricted: true
   rarity: 5
   special: Cumbersome 3, Defensive 2, Deflection 2
-  index: Rise of the Separatists:53
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:53
   generatedId: 2f5e7348-6b27-451c-a74a-bf962766193a
 - category: Melee
   name: M8 Combat Knife
@@ -3396,7 +3396,7 @@
   restricted: false
   rarity: 4
   special: Accurate 1, Pierce 1
-  index: Rise of the Separatists:54
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:54
   generatedId: 6287722e-afa2-4618-9d54-478835c4134c
 - category: Melee
   name: TZ-97 "Zapper" Shock Baton
@@ -3411,7 +3411,7 @@
   restricted: false
   rarity: 6
   special: Concussive 1, Stun Damage
-  index: Rise of the Separatists:54
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:54
   generatedId: 048518e0-6461-4aa1-9931-48da138400dd
 - category: Lightsaber
   name: Basic Lightsaber
@@ -3426,7 +3426,7 @@
   restricted: false
   rarity: 10
   special: Breach 1, Sunder
-  index: Rise of the Separatists:54
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:54
   generatedId: 9c0775b6-994d-47cd-a8a8-139af9f8b1fd
 - category: Lightsaber
   name: Shoto
@@ -3441,7 +3441,7 @@
   restricted: false
   rarity: 10
   special: Accurate 1, Breach 1, Sunder
-  index: Rise of the Separatists:55
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:55
   generatedId: f653309f-6078-420a-8dae-d27509fb9c0b
 - category: Energy
   name: A280-CFE Convertible Heavy Blaster Pistol
@@ -3455,7 +3455,7 @@
   restricted: true
   rarity: 7
   special: Stun setting
-  index: Cyphers and Masks:38
+  index: 076c8898-25fe-48aa-8b04-0c702133d05e:38
   generatedId: 448ce2a3-5f39-4b63-93e7-7190296f3589
 - category: Energy
   name: CS14 "Ghost" Light Blaster Pistol
@@ -3469,7 +3469,7 @@
   restricted: true
   rarity: 6
   special: Stun setting
-  index: Cyphers and Masks:38
+  index: 076c8898-25fe-48aa-8b04-0c702133d05e:38
   generatedId: 5c85f5a1-4ccd-4ea1-a7dd-634e43908bc1
 - category: Energy
   name: Nightstinger Blaster Rifle
@@ -3483,7 +3483,7 @@
   restricted: false
   rarity: 9
   special: Accurate 2, Cumbersome 3, Pierce 1, Stun setting
-  index: Cyphers and Masks:39
+  index: 076c8898-25fe-48aa-8b04-0c702133d05e:39
   generatedId: b5945c40-879c-48c1-b157-a410a7d00adb
 - category: Energy
   name: ST-M40 Heavy Repeating Blaster Pistol
@@ -3497,7 +3497,7 @@
   restricted: false
   rarity: 5
   special: Auto-fire, Inaccurate 1
-  index: Cyphers and Masks:39
+  index: 076c8898-25fe-48aa-8b04-0c702133d05e:39
   generatedId: fc4392b8-b228-48fa-82f9-0310c977d6f5
 - category: Other
   name: Vac Attack Mk-127 Concealable Disc Launcher
@@ -3511,7 +3511,7 @@
   restricted: false
   rarity: 7
   special: Limited Ammo 4, Pierce 1, Vicious 1
-  index: Cyphers and Masks:39
+  index: 076c8898-25fe-48aa-8b04-0c702133d05e:39
   generatedId: a3b95d87-2fa8-435c-b7d1-59af7e9514c5
 - category: Other
   name: Wrist Blaster
@@ -3525,7 +3525,7 @@
   restricted: true
   rarity: 6
   special: Limited Ammo 1, Pierce 4
-  index: Cyphers and Masks:40
+  index: 076c8898-25fe-48aa-8b04-0c702133d05e:40
   generatedId: 81ffba12-dc8d-4be0-aa18-e87785f0b855
 - category: Brawl
   name: Garrote
@@ -3539,7 +3539,7 @@
   restricted: false
   rarity: 2
   special: Stun setting
-  index: Cyphers and Masks:40
+  index: 076c8898-25fe-48aa-8b04-0c702133d05e:40
   generatedId: 2af7fafd-35ca-460e-b581-35f881c962fe
 - category: Melee
   name: MMD-18 Molecular Dagger
@@ -3553,7 +3553,7 @@
   restricted: false
   rarity: 4
   special: Pierce 2
-  index: Cyphers and Masks:40
+  index: 076c8898-25fe-48aa-8b04-0c702133d05e:40
   generatedId: bdf59548-81ac-47b2-b9d5-5d96d45368e6
 - category: Brawl
   name: Sap Gloves
@@ -3567,5 +3567,5 @@
   restricted: false
   rarity: 4
   special: Concusive 1
-  index: Cyphers and Masks:40
+  index: 076c8898-25fe-48aa-8b04-0c702133d05e:40
   generatedId: b2ad9697-a6ac-4a81-832c-791f980cd6aa
