--- a/src/data/species.yaml
+++ b/src/data/species.yaml
@@ -197,7 +197,7 @@
   generatedId: 5c985add-0b57-43ba-a2a4-c7c56f231cfc
 - name: Drabatan
   player: Yes
-  index: Dawn of Rebellion:92
+  index: 47080550-507f-4fa7-b206-f84451a997c6:92
   generatedId: 43270309-c549-460b-a9d6-ae14ff0298f9
 - name: Dragonsnake
   player: No
@@ -293,7 +293,7 @@
   generatedId: e1e8e364-6575-476e-8c42-8989cd230053
 - name: Gigoran
   player: Yes
-  index: Dawn of Rebellion:93
+  index: 47080550-507f-4fa7-b206-f84451a997c6:93
   generatedId: 28508532-99cd-46c8-99e3-ec26391432ad
 - name: Gorgodon
   player: No
@@ -361,7 +361,7 @@
   generatedId: 6b5c8ea1-66c4-4fdc-82f8-910a39d15db9
 - name: Iakaru
   player: Yes
-  index: Dawn of Rebellion:94
+  index: 47080550-507f-4fa7-b206-f84451a997c6:94
   generatedId: 717eeaea-9feb-417b-8afc-1a40de862bd8
 - name: Ibbot
   player: No
@@ -729,7 +729,7 @@
   generatedId: dd0697fe-eb71-4747-bfc1-9b422f03772d
 - name: Tognath
   player: Yes
-  index: Dawn of Rebellion:96
+  index: 47080550-507f-4fa7-b206-f84451a997c6:96
   generatedId: 53ccc3f3-cec4-40f7-82aa-cc2a9593b04a
 - name: Togruta
   player: Yes
