Replace misspellings of DoR with generatedId

--- a/src/data/talents.yaml
+++ b/src/data/talents.yaml
@@ -1965,19 +1965,19 @@
   activation: Passive
   ranked: No
   forceSensitive: No
-  index: Dawen of Rebellion:115
+  index: 47080550-507f-4fa7-b206-f84451a997c6:115
   generatedId: 36b143ac-a99b-4ef0-b2ce-57064cc0c3df
 - name: Pride and Joy (Improved)
   activation: Passive
   ranked: No
   forceSensitive: No
-  index: Dawen of Rebellion:115
+  index: 47080550-507f-4fa7-b206-f84451a997c6:115
   generatedId: 84b2b970-63e6-4a50-86ae-596089d46fde
 - name: Pride and Joy (Supreme)
   activation: Active (Incidental)
   ranked: No
   forceSensitive: No
-  index: Dawen of Rebellion:115
+  index: 47080550-507f-4fa7-b206-f84451a997c6:115
   generatedId: a0e78027-5d33-4b1e-9500-4e004c64606e
 - name: Prime Positions
   activation: Passive
