--- a/src/data/weapons.yaml
+++ b/src/data/weapons.yaml
@@ -462,7 +462,7 @@
   index: 8b7c0c76-a618-4e9b-ad91-a8b142c7b866:43
   generatedId: 7705075c-8a80-4efb-8b66-2fcdb5dab097
 - category: Energy
-  name: Dcd13640f-c9b8-4e02-b101-f4e7c502b513-MR6 Modular Rifle
+  name: DDC-MR6 Modular Rifle
   skill: Ranged [Heavy]
   damage: 7
   crit: 3
