--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -667,8 +667,8 @@
 - book: Collapse of the Republic
   resource: Creatures Weapons
   source: The Outer Rim
-  entered: No
-  audited: No
+  entered: Yes
+  audited: Yes
 - book: Collapse of the Republic
   resource: Gear
   source: The Outer Rim
