--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -652,8 +652,8 @@
 - book: Collapse of the Republic
   resource: Adversaries Weapons
   source: The Outer Rim
-  entered: No
-  audited: No
+  entered: Yes
+  audited: Yes
 - book: Collapse of the Republic
   resource: Armor
   source: The Outer Rim
